objects/Customer_Site__c.object
<CustomObject>
    <fields>
        <fullName>Account_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Site</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipName>Customer_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Customer_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bandwidth_Recommendation_Snapshot__c</fullName>
        <label>Bandwidth Recommendation Snapshot</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CIC_Server_Located_Here__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIC Server(s) Located Here</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>**City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Core Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Site_Name__c</fullName>
        <label>Customer Site Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datacenter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Datacenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Genesys_Site_Name__c</fullName>
        <label>Genesys Site Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureConnect Cloud-AU-Melbourne-NextDC</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-AU-Sydney-Equinix</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-BR-Sao Paulo-Alog</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-CA-Montreal-Cologix</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-CA-Toronto-Black Iron Data</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-DE-Frankfurt-Equinix</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-GB-Slough-Savvis</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-JP-Kitakyushu-IDC2 KKJ</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-JP-Tokyo-IDC1 HND</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-US-Carmel-nFrame</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-US-Englewood-Latisys</fullName>
                </value>
                <value>
                    <fullName>PureConnect Cloud-US-Indianapolis-PDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Data_Sovereignty_needed_for_this_loca__c</fullName>
        <label>Is Data Sovereignty needed for this loca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyCustSiteId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyCustSite Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Analog_Devices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legacy Analog Devices?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Channels__c</fullName>
        <label>Line/Channels</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>**Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Data center</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_Caller_Inbound_Calls__c</fullName>
        <label>Location of Caller (Inbound Calls)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Consumers_Outbound_Calls_fr__c</fullName>
        <label>Location of Consumers (Outbound Calls fr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Solution_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Solution Design</label>
        <referenceTo>New_Solution_Design__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Edges__c</fullName>
        <label>Number of Edges</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCC_DataCenter_Airport_Code__c</fullName>
        <label>PCC DataCenter (Airport Code)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>DEN</fullName>
                </value>
                <value>
                    <fullName>YYZ</fullName>
                </value>
                <value>
                    <fullName>YUL</fullName>
                </value>
                <value>
                    <fullName>LHR</fullName>
                </value>
                <value>
                    <fullName>FRA</fullName>
                </value>
                <value>
                    <fullName>KKJ</fullName>
                </value>
                <value>
                    <fullName>HND</fullName>
                </value>
                <value>
                    <fullName>SYD</fullName>
                </value>
                <value>
                    <fullName>MEL</fullName>
                </value>
                <value>
                    <fullName>GRU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSTN_Provider__c</fullName>
        <label>PSTN Provider?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>CANADA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>BRAZIL</fullName>
                </value>
                <value>
                    <fullName>N / A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Medium__c</fullName>
        <label>Service Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SIP Trunk</fullName>
                </value>
                <value>
                    <fullName>TDM (T1/PRI)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_s_being_delivered__c</fullName>
        <label>Service(s) being delivered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Long Distance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SiteAddress__c</fullName>
        <label>Site Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Address</label>
        <referenceTo>Site_Address__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Agents__c</fullName>
        <label>Site # Agents</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Biz_Users__c</fullName>
        <label>Site # Biz Users</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Network_Readiness_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Network Readiness Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Supervisors__c</fullName>
        <label>Site # Supervisors</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Telcom_Trunks__c</fullName>
        <label>Site # Telcom Trunks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solution_Design__c</fullName>
        <label>Solution Design - Old Reference</label>
        <referenceTo>Solution_Design__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Customer_Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State_Providence__c</fullName>
        <label>**State/Providence</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>**Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>**Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Communicate_Users__c</fullName>
        <label># of Communicate Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Corporate_Remote_Agents__c</fullName>
        <label># of Corporate Remote Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Engage_Users__c</fullName>
        <label># of Engage Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Work_From_Home_WFH_Agents__c</fullName>
        <label># of Work From Home (WFH) Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Site</label>
    <nameField>
        <displayFormat>Site-{00000}</displayFormat>
        <label>**Customer Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <recordTypes>
        <fullName>Genesys_Site</fullName>
        <active>true</active>
        <label>Genesys Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Customer_Site</fullName>
        <active>true</active>
        <label>PC Customer Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premise_CaaS_Site</fullName>
        <active>true</active>
        <label>Customer Site</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>